--- a/style.css
+++ b/style.css
@@ -10,8 +10,73 @@ body {
 
 .container {
   margin: 0 auto;
-  width: 70%;
-  height: 700px;
+  width: 80%;
   background-color: #f5f5f5;
+  padding: 100px;
   margin-top: 100px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 50px;
+}
+
+.img-items {
+  width: 30%;
+  min-width: 150px;
+}
+
+.items {
+  width: 40%;
+  min-width: 250px;
+  text-align: center;
+}
+
+h1,
+p {
+  margin-bottom: 1.2rem;
+}
+
+p {
+  font-size: 14px;
+}
+
+a {
+  width: 100%;
+  background-color: #4caf50;
+  color: white;
+  padding: 14px 100px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+input {
+  width: 60%;
+  width: 100%;
+  background-color: rgb(235, 234, 234);
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-align: center;
+}
+
+@media only screen and (max-width: 920px) {
+  .flex-container {
+    flex-direction: column;
+  }
+
+  .img-items {
+    order: 1;
+    display: flex;
+    justify-content: center;
+  }
 }
